--- a/index.html
+++ b/index.html
@@ -284,19 +284,19 @@
                           <div
                               class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
                           hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                              <a href="project_template.html"
+                              <a href="projects/anuario-movilidad.html"
                                   class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                   <img src="assets/img/Bogota_trafic_Accidents.png" alt="Bogota Road Safety preview"
                                       class="w-full h-full object-cover">
                               </a>
                               <div class="p-5 space-y-3">
                                   <div class="flex items-start justify-between gap-2">
-                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Bogota Road
-                          Safety Annual Reports</h3>
+                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Data Science &
+                          Viz: Bogotá Road Casualty Yearbook (2017–2022)</h3>
                                   </div>
                                   <p class="text-slate-300 text-sm" data-i18n="proj_2_desc">
-                                      Annual road safety reports for Bogota integrating crash data, trends, and
-                          prioritized recommendations to reduce casualties citywide.
+                                      Designed indicators and ggplot2 visuals for Bogotá’s 2017–2022 road casualty
+                          yearbooks, enabling Vision Zero actions.
                                   </p>
                                   <div class="flex flex-wrap gap-2 text-xs font-mono text-purple-200">
                                       <span class="bg-purple-900/50 px-2 py-1 rounded">Road Safety</span>
@@ -307,7 +307,7 @@
                                       <span class="bg-purple-900/50 px-2 py-1 rounded">ggplot2</span>
                                   </div>
                                   <div class="flex gap-3">
-                                      <a href="project_template.html"
+                                      <a href="projects/anuario-movilidad.html"
                                           class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
                           hover:bg-gray-200 transition">View
                                           Project</a>
